Fixed issue with select appearance on mobile and fixed problem with button sizing in edit recipe.

--- a/static/css/create-recipe.css
+++ b/static/css/create-recipe.css
@@ -64,7 +64,8 @@
     max-width: 720px;
     width: 90%;
     text-align: center;
-    padding: 3px 0;
+    text-align-last: center;
+    padding: 3px 10px;
     border-radius: 5px;
     border: 1px solid black;
 
