--- a/static/css/recipes.css
+++ b/static/css/recipes.css
@@ -19,9 +19,10 @@
 #filter {
     width: 50%;
     text-align: center;
+    text-align-last:center;
     display: block;
     margin: 0 auto;
-    padding: 4px 0;
+    padding: 4px 10px;
     border: 1px solid black;
     border-radius: 10px;
     min-width: 250px;
